--- a/src/widgets/LedFlagWidget/SingleLed/SingleLed.module.scss
+++ b/src/widgets/LedFlagWidget/SingleLed/SingleLed.module.scss
@@ -9,10 +9,6 @@
   position: relative;
 }
 
-.animate {
-  visibility: visible;
-}
-
 .singleLedInner {
   position: absolute;
   inset: 8px;
